--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ function loadPayloadData() // preload payload data
   <h1 id=msgs style='font-size:25px;text-align:center;color:#FFFFFF'>Kameleon PS4 900FW Jailbreak V4.6</h1>
     <div id=mymenu style="text-align:center">
     <div text-align= center>Pass = <span id=passCounter></span>&nbsp;&nbsp;:&nbsp;&nbsp;Fail = <span id=failCounter></span></div>
-    <div style="width:100%;font-size:20px;color:#0AFFFF">
+    <div style="width:100%;font-size:22px;color:#9D00FF">
     PS4 Firmware <span id="PS4fw"></span></div>
     <br>
     <div style=font-size:16px>BIN LOADER</div>
