--- a/index.html
+++ b/index.html
@@ -60,17 +60,17 @@ function loadPayloadData() // preload payload data
 <script src="webkit.js"></script>
 </head>
 <body>
-  <h1 id=msgs style='font-size:25px;text-align:center;color:#FFFFFF'>Kameleon PS4 900FW Jailbreak V4.6</h1>
+  <h1 id=msgs style="font-size:25px;color:white;text-shadow: 2px 1px 3px #FF00FF">Kameleon PS4 900FW Jailbreak V4.6</h1>
     <div id=mymenu style="text-align:center">
-    <div text-align= center>Pass = <span id=passCounter></span>&nbsp;&nbsp;:&nbsp;&nbsp;Fail = <span id=failCounter></span></div>
-    <div style="width:100%;font-size:22px;color:#FFFFFF">
+    <div style="font-size:20px;color:white;text-shadow: 2px 1px 3px #FF00FF" text-align= center>Pass = <span id=passCounter></span>&nbsp;&nbsp;:&nbsp;&nbsp;Fail = <span id=failCounter></span></div>
+    <div style="font-size:20px;color:white;text-shadow: 2px 1px 3px #FF00FF">
     PS4 Firmware <span id="PS4fw"></span></div>
     <br>
-    <div style=font-size:16px>BIN LOADER</div>
+    <div style="font-size:20px;color:white;text-shadow: 2px 1px 3px #FF00FF">BIN LOADER</div>
     <button class="btnkme" onMouseOver="msgs.innerHTML='Receives .Bin payloads on port 9020 via NetCat'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.4'" onclick="load_binloader(); return false">Binloader-9020</button>
     <button class="btnkme" onMouseOver="msgs.innerHTML='Receives .Bin payloads on port 9021 via NetCat'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.4'" onclick="load_binloader9021(); return false">Binloader-9021</button>
     <br><br>
-    <div style=font-size:16px>GOLDHEN</div>
+    <div style="font-size:20px;color:white;text-shadow: 2px 1px 3px #FF00FF">GOLDHEN</div>
     <button class="btnkme" onMouseOver="msgs.innerHTML='GoldHen v2.0b Version - By SiSTRo'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_goldhenb(); return false">GoldHen V2.0B</button>
     <button class="btnkme" onMouseOver="msgs.innerHTML='GoldHen v2.0b2 Version - By SiSTRo'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_goldhenb2(); return false">GoldHen V2.0B2</button>
     <button class="btnkme1" onMouseOver="msgs.innerHTML='GoldHen v2.1.1 (Latest) - By SiSTRo'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_goldhen21(); return false">GoldHen V2.1.1 (Latest)</button>
@@ -78,8 +78,8 @@ function loadPayloadData() // preload payload data
     <button class="btnkme" onMouseOver="msgs.innerHTML='Go To 900FW Payloads Menu Offline Cache'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_plmenu(); return false">PS4 900FW Payloads Menu Offline</button>
     
     <br><br>
-    <p style="text-align:center;font-size:25px;color:#FF69B4">Massive Thanks - Znullptr, ChendoChap, Specter, Sleirsgoevy, theflow0, SiSTRo, Al-Azif, PRB-Borg, Leeful, Nazky And Many More...</p>
-    <p style="text-align:center;font-size:25px;color:#F535AA">https://twitter.com/KameleonRe</p>
+    <p style="text-align:center;font-size:25px;color:#FF69B4;text-shadow: 1px 0px 3px black">Massive Thanks - Znullptr, ChendoChap, Specter, Sleirsgoevy, theflow0, SiSTRo, Al-Azif, PRB-Borg, Leeful, Nazky And Many More...</p>
+    <p style="text-align:center;font-size:25px;color:#F535AA;text-shadow: 1px 0px 3px black">https://twitter.com/KameleonRe</p>
     </div>
     <script>
     var UA = navigator.userAgent.substring(navigator.userAgent.indexOf('5.0 (') + 19, navigator.userAgent.indexOf(') Apple')).replace("layStation 4/","");
