--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@ function loadPayloadData() // preload payload data
     PS4 Firmware <span id="PS4fw"></span></div>
     <br>
     <div style="font-size:20px;color:white;text-shadow: 2px 1px 3px #FF00FF">BIN LOADER</div>
-    <button class="btnkme" onMouseOver="msgs.innerHTML='Receives .Bin payloads on port 9020 via NetCat'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.4'" onclick="load_binloader(); return false">Binloader-9020</button>
-    <button class="btnkme" onMouseOver="msgs.innerHTML='Receives .Bin payloads on port 9021 via NetCat'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.4'" onclick="load_binloader9021(); return false">Binloader-9021</button>
+    <button style="text-align:center;text-shadow: 1px 0px 3px black" class="btnkme" onMouseOver="msgs.innerHTML='Receives .Bin payloads on port 9020 via NetCat'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.4'" onclick="load_binloader(); return false">Binloader-9020</button>
+    <button style="text-align:center;text-shadow: 1px 0px 3px black" class="btnkme" onMouseOver="msgs.innerHTML='Receives .Bin payloads on port 9021 via NetCat'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.4'" onclick="load_binloader9021(); return false">Binloader-9021</button>
     <br><br>
     <div style="font-size:20px;color:white;text-shadow: 2px 1px 3px #FF00FF">GOLDHEN</div>
-    <button class="btnkme" onMouseOver="msgs.innerHTML='GoldHen v2.0b Version - By SiSTRo'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_goldhenb(); return false">GoldHen V2.0B</button>
-    <button class="btnkme" onMouseOver="msgs.innerHTML='GoldHen v2.0b2 Version - By SiSTRo'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_goldhenb2(); return false">GoldHen V2.0B2</button>
-    <button class="btnkme1" onMouseOver="msgs.innerHTML='GoldHen v2.1.1 (Latest) - By SiSTRo'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_goldhen21(); return false">GoldHen V2.1.1 (Latest)</button>
+    <button style="text-align:center;text-shadow: 1px 0px 3px black" class="btnkme" onMouseOver="msgs.innerHTML='GoldHen v2.0b Version - By SiSTRo'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_goldhenb(); return false">GoldHen V2.0B</button>
+    <button style="text-align:center;text-shadow: 1px 0px 3px black" class="btnkme" onMouseOver="msgs.innerHTML='GoldHen v2.0b2 Version - By SiSTRo'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_goldhenb2(); return false">GoldHen V2.0B2</button>
+    <button style="text-align:center;text-shadow: 1px 0px 3px black" class="btnkme1" onMouseOver="msgs.innerHTML='GoldHen v2.1.1 (Latest) - By SiSTRo'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_goldhen21(); return false">GoldHen V2.1.1 (Latest)</button>
     <br><br>
-    <button class="btnkme" onMouseOver="msgs.innerHTML='Go To 900FW Payloads Menu Offline Cache'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_plmenu(); return false">PS4 900FW Payloads Menu Offline</button>
+    <button style="text-align:center;text-shadow: 1px 0px 3px black" class="btnkme" onMouseOver="msgs.innerHTML='Go To 900FW Payloads Menu Offline Cache'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_plmenu(); return false">PS4 900FW Payloads Menu Offline</button>
     
     <br><br>
     <p style="text-align:center;font-size:25px;color:#FF69B4;text-shadow: 1px 0px 3px black">Massive Thanks - Znullptr, ChendoChap, Specter, Sleirsgoevy, theflow0, SiSTRo, Al-Azif, PRB-Borg, Leeful, Nazky And Many More...</p>
