--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ function loadPayloadData() // preload payload data
 <script src="webkit.js"></script>
 </head>
 <body>
-  <h1 id=msgs style="font-size:25px;color:white;text-shadow: 2px 1px 3px #FF00FF">Kameleon PS4 900FW Jailbreak V4.6</h1>
+  <h1 id=msgs style="font-size:25px;color:white">Kameleon PS4 900FW Jailbreak V4.6</h1>
     <div id=mymenu style="text-align:center">
     <div style="font-size:20px;color:white;text-shadow: 2px 1px 3px #FF00FF" text-align= center>Pass = <span id=passCounter></span>&nbsp;&nbsp;:&nbsp;&nbsp;Fail = <span id=failCounter></span></div>
     <div style="font-size:20px;color:white;text-shadow: 2px 1px 3px #FF00FF">
