--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@ function loadPayloadData() // preload payload data
     PS4 Firmware <span id="PS4fw"></span></div>
     <br>
     <div style="font-size:20px;color:white;text-shadow: 2px 1px 3px #FF00FF">BIN LOADER</div>
-    <button class="btnkme" onMouseOver="msgs.innerHTML='Receives .Bin payloads on port 9020 via NetCat'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.4'" onclick="load_binloader(); return false">Binloader-9020</button>
-    <button class="btnkme" onMouseOver="msgs.innerHTML='Receives .Bin payloads on port 9021 via NetCat'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.4'" onclick="load_binloader9021(); return false">Binloader-9021</button>
+    <button class="btnkme" onMouseOver="msgs.innerHTML='Receives .Bin payloads on port 9020 via NetCat'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_binloader(); return false">Binloader-9020</button>
+    <button class="btnkme" onMouseOver="msgs.innerHTML='Receives .Bin payloads on port 9021 via NetCat'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_binloader9021(); return false">Binloader-9021</button>
     <br><br>
     <div style="font-size:20px;color:white;text-shadow: 2px 1px 3px #FF00FF">GOLDHEN</div>
     <button class="btnkme" onMouseOver="msgs.innerHTML='GoldHen v2.0b Version - By SiSTRo'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_goldhenb(); return false">GoldHen V2.0B</button>
@@ -152,8 +152,8 @@ if (sessionStorage.goldhen != "loaded")
 }
 
 function load_goldhen21(){
-msgs.innerHTML="<h1 style='font-size:25px;text-align:center;'>Loading GoldHen V2.1. Please wait!!!</h1>";
-LoadedMSG="GoldHen V2.1 Loaded. Please Close The Browser!!! Re-Open it if you wanna lauch any other payload";
+msgs.innerHTML="<h1 style='font-size:25px;text-align:center;'>Loading GoldHen V2.1.1 Please wait!!!</h1>";
+LoadedMSG="GoldHen V2.1.1 Loaded. Please Close The Browser!!! Re-Open it if you wanna lauch any other payload";
 PLfile = "pl_goldhen21.bin";
 if (sessionStorage.goldhen != "loaded")
 {
