--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ function loadPayloadData() // preload payload data
     <div style="font-size:20px;color:white;text-shadow: 2px 1px 3px #FF00FF">GOLDHEN</div>
     <button class="btnkme" onMouseOver="msgs.innerHTML='GoldHen v2.0b Version - By SiSTRo'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_goldhenb(); return false">GoldHen V2.0B</button>
     <button class="btnkme" onMouseOver="msgs.innerHTML='GoldHen v2.0b2 Version - By SiSTRo'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_goldhenb2(); return false">GoldHen V2.0B2</button>
-    <button style="text-align:center;text-shadow: 1px 0px 3px blue" class="btnkme1" onMouseOver="msgs.innerHTML='GoldHen v2.1.2 (Latest) - By SiSTRo'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_goldhen21(); return false">GoldHen V2.1.2 (Latest)</button>
+    <button style="text-align:center;text-shadow: 1px 0px 3px blue" class="btnkme1" onMouseOver="msgs.innerHTML='GoldHen v2.1.1 (Latest) - By SiSTRo'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_goldhen21(); return false">GoldHen V2.1.1 (Latest)</button>
     <br><br>
     <button class="btnkme" onMouseOver="msgs.innerHTML='Go To 900FW Payloads Menu Offline Cache'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_plmenu(); return false">PS4 900FW Payloads Menu Offline</button>
     
@@ -103,7 +103,36 @@ function load_mainmenu(){
 msgs.innerHTML="<h1 style='font-size:25px;text-align:center;'>Going to Main Menu!!!</h1>";
 var link = document.createElement('a');
 document.body.appendChild(link);
-link.href = '../index.html';
+link.href = '../index.html'; By SiSTRo'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_goldhen21(); return false">GoldHen V2.1.2 (Latest)</button>
+    <br><br>
+    <button class="btnkme" onMouseOver="msgs.innerHTML='Go To 900FW Payloads Menu Offline Cache'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_plmenu(); return false">PS4 900FW Payloads Menu Offline</button>
+    
+    <br><br>
+    <p style="text-align:center;font-size:25px;color:#FF69B4;text-shadow: 1px 0px 3px black">Massive Thanks - Znullptr, ChendoChap, Specter, Sleirsgoevy, theflow0, SiSTRo, Al-Azif, PRB-Borg, Leeful, Nazky And Many More...</p>
+    <p style="text-align:center;font-size:25px;color:#F535AA;text-shadow: 1px 0px 3px black">https://twitter.com/KameleonRe</p>
+    </div>
+    <script>
+    var UA = navigator.userAgent.substring(navigator.userAgent.indexOf('5.0 (') + 19, navigator.userAgent.indexOf(') Apple')).replace("layStation 4/","");
+    if (UA == "9.00"){PS4fw.innerHTML="v"+UA+" Detected"};if(UA != "9.00"){PS4fw.innerHTML="Spoofed To v"+UA};
+    </script>
+    <script>
+    if (localStorage.passcount == null || localStorage.passcount == undefined) localStorage.passcount=0;
+     if (localStorage.passCounter == null || localStorage.passCounter == undefined ){
+      passCounter.innerHTML=localStorage.passcount;}
+    if (localStorage.failcount == null || localStorage.failcount == undefined) localStorage.failcount=0;
+     if (localStorage.failCounter == null || localStorage.failCounter == undefined ){
+      failCounter.innerHTML=localStorage.failcount;}
+</script>
+    </script>
+
+<script>
+var exec_type = "";
+sessionStorage.setItem("goldhen","");
+
+function load_mainmenu(){
+msgs.innerHTML="<h1 style='font-size:25px;text-align:center;'>Going to Main Menu!!!</h1>";
+var link = document.createElement('a');
+document.body.appendChild(link);
 link.click();  
 }
 
@@ -152,8 +181,8 @@ if (sessionStorage.goldhen != "loaded")
 }
 
 function load_goldhen21(){
-msgs.innerHTML="<h1 style='font-size:25px;text-align:center;'>Loading GoldHen V2.1.2 Please wait!!!</h1>";
-LoadedMSG="GoldHen V2.1.2 Loaded. Please Close The Browser!!! Re-Open it if you wanna lauch any other payload";
+msgs.innerHTML="<h1 style='font-size:25px;text-align:center;'>Loading GoldHen V2.1.1 Please wait!!!</h1>";
+LoadedMSG="GoldHen V2.1.1 Loaded. Please Close The Browser!!! Re-Open it if you wanna lauch any other payload";
 PLfile = "pl_goldhen21.bin";
 if (sessionStorage.goldhen != "loaded")
 {
