--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ function loadPayloadData() // preload payload data
     <div style="font-size:20px;color:white;text-shadow: 2px 1px 3px #FF00FF">GOLDHEN</div>
     <button class="btnkme" onMouseOver="msgs.innerHTML='GoldHen v2.0b2 Version - By SiSTRo'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_goldhenb2(); return false">GoldHen v2.0B2</button>
     <button style="text-align:center;text-shadow: 1px 0px 3px blue" class="btnkme1" onMouseOver="msgs.innerHTML='GoldHen v2.1.1 (Stable) - By SiSTRo'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_goldhen211(); return false">GoldHen v2.1.1 (Stable)</button>
-    <button style="text-align:center;text-shadow: 1px 0px 3px blue" class="btnkme1" onMouseOver="msgs.innerHTML='GoldHen v2.2.2 (Latest) - By SiSTRo'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_goldhen221(); return false">GoldHen v2.2.2 (Latest)</button>
+    <button style="text-align:center;text-shadow: 1px 0px 3px blue" class="btnkme" onMouseOver="msgs.innerHTML='GoldHen v2.2.2 (Latest) - By SiSTRo'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_goldhen221(); return false">GoldHen v2.2.2 (Latest)</button>
 	<br><br>
     <button class="btnkme" onMouseOver="msgs.innerHTML='Go To 900FW Payloads Menu Offline Cache'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_plmenu(); return false">PS4 900FW Payloads Menu Offline</button>
     
